<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
        tools:context=".LocalPeerConnectionActivity"
    android:orientation="vertical"
    android:padding="8dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/peerConnectionCall"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/call"
            android:background="@android:color/holo_green_light"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/peerConnectionHangup"
            android:layout_weight="1"
            android:layout_marginTop="16dp"
            android:text="@string/hangup"
            android:background="@android:color/holo_red_light"
            />
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/peerSendMessageEditText"
        android:hint="@string/peer_message_hint"
        android:layout_marginTop="16dp"
        android:minLines="1"
        android:maxLines="5"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sendMessage"
        android:text="@string/send"
        android:layout_gravity="end"
        android:layout_marginEnd="8dp"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/message_received"
        android:layout_marginTop="24dp"
        android:layout_marginStart="8dp"
        android:textSize="18sp"
        android:textStyle="bold"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/peerMessageReceived"
        android:paddingTop="16dp"
        android:textSize="18sp"
        android:layout_marginStart="8dp"
        />

</LinearLayout>
